# Tango

./: .breakpoints  .gitignore  _test_runnertest_suite.py  bot.py  helper.py  main.py  package-lock.json  pyproject.toml  requirements.txt  wat-to-do.txt
cogs/: fun.py  information.py  owner.py  social.py
db/: channel.db  channel.db-journal  comment.db  info.db  info.db-journal  video.db  video.db-journal
prototype/: 2main.py  videos.text
